RESOLVED FIXED 283909
RTCVideoDecoderH264 should report its last available frame as not reordered
https://bugs.webkit.org/show_bug.cgi?id=283909
Summary RTCVideoDecoderH264 should report its last available frame as not reordered
youenn fablet
Reported 2024-12-02 05:53:30 PST
RTCVideoDecoderH264 should report its last available frame as not reordered
Attachments
Radar WebKit Bug Importer
Comment 1 2024-12-02 05:53:49 PST
EWS
Comment 2 2024-12-02 08:15:56 PST
Committed 287220@main (6405a44520e5): <https://commits.webkit.org/287220@main> Reviewed commits have been landed. Closing PR #37313 and removing active labels.
WebKit Commit Bot
Comment 3 2024-12-03 09:27:14 PST
Re-opened since this is blocked by bug 283979
EWS
Comment 4 2024-12-05 00:59:12 PST
Committed 287389@main (962e5662e704): <https://commits.webkit.org/287389@main> Reviewed commits have been landed. Closing PR #37430 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.